Sat Jul 29 04:39:39 1995  Tom Yu  <tlyu@dragons-lair.MIT.EDU>

	* configure.in: don't link with -lkadm.

Fri Jul 7 15:48:58 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove all explicit library handling and LDFLAGS.
	* configure.in - Add KRB5_LIBRARIES and USE_KADM_LIBRARY.

Wed Jun 28 13:13:34 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* sim_server.c: Include <string.h> for memcpy definitions.

Thu Jun 15 17:40:51 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Sat Jun 10 22:59:20 1995  Tom Yu  (tlyu@dragons-lair)

	* sim_server.c: krb5_auth_context redefinitions

Fri Jun  9 18:23:58 1995    <tytso@rsx-11.mit.edu>

	* sim_server.c: #include krb5.h first, to reduce size of debugging
	        executable.

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Mon May 01 15:56:32 1995  Chris Provenzano (proven@mit.edu)

        * sim_server.c (main()): Changes to auth_context to better
                support full addresses, for mk_safe() and friends.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * sim_server.c: Use new calling convention for krb5_rd_req(),
		krb5_rd_safe(), and krb5_rd_priv().

Thu Mar  2 12:27:03 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:24:58 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:01:53 1995  John Gilmore  (gnu at toad.com)

	* sim_server.c:  Avoid <krb5/...> and <com_err.h> includes.

Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)

    	* Added krb5_context to all krb5_routines

Thu Sep 29 22:46:51 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: relink executable when libraries change
